# mcp-doctor

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/mcp_doctor/: __init__.py  checks.py  cli.py  config.py  models.py  scanner.py
tests/: test_scanner.py
tests/fixtures/: sample_mcp.json
