[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-doctor"
version = "0.1.0"
description = "Health checker and diagnostics CLI for Model Context Protocol (MCP) servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "XzCool" }]
keywords = ["mcp", "model-context-protocol", "cursor", "claude", "ai-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mcp-doctor = "mcp_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/XzCool/mcp-doctor"
Repository = "https://github.com/XzCool/mcp-doctor"
Issues = "https://github.com/XzCool/mcp-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_doctor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
